bckp/ui/k8s/be.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: be-service
  labels:
    name: be
spec:
  ports:
  - port: 3000
    name: be-port
    protocol: TCP
    targetPort: 3000
  selector:
    app: be-app
    id: "1"
  type: LoadBalancer
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: be-deployment
spec:
  template:
    metadata:
      labels:
        app: be-app
        id: "1"
    spec:
      containers:
      - name: be-app
        image: registry-gitlab.rdcloud.intra.hitachi.co.jp/oza-public/tmp-registry/hpay-be:0.1
        ports:
        - containerPort: 3000
        #command: ["/sbin/init"]
