bckp/ui/k8s/fe.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-service
  labels:
    name: fe
spec:
  ports:
  - port: 8080
    name: fe-port
    protocol: TCP
    targetPort: 8080
  selector:
    app: fe-app
    id: "1"
  type: LoadBalancer
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: fe-deployment
spec:
  template:
    metadata:
      labels:
        app: fe-app
        id: "1"
    spec:
      containers:
      - name: fe-app
        image: registry-gitlab.rdcloud.intra.hitachi.co.jp/oza-public/tmp-registry/hpay-fe:0.1
        ports:
        - containerPort: 8080
        #command: ["/sbin/init"]
