bckp/ui/k8s/ingress-be.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bcs-hpay-be
  #annotations:
  # kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: bcs-hpay-be.k8s.rdcloud.intra.hitachi.co.jp
    http:
      paths:
      - backend:
          serviceName: be-service
          servicePort: 3000
