bckp/ui/k8s/ingress-fe.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bcs-hpay
  #annotations:
  # kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: bcs-hpay.k8s.rdcloud.intra.hitachi.co.jp
    http:
      paths:
      - backend:
          serviceName: fe-service
          servicePort: 8080
